--- a/addons.html
+++ b/addons.html
@@ -96,31 +96,56 @@
     </div>
   </nav>
 
-  <div class="unified-container">
-    <div class="addons-container">
-      <div class="page-header">
-        <h1>ADDONS & WEAKAURAS</h1>
-        <div class="last-updated" id="last-updated">
-          Last updated: 26th January 2026<br>
-          Resolution: 1920 x 1080 • UI Scale: 65%
-        </div>
-
-      <div class="ui-map-wrapper" id="uiMapWrapper"></div>
-
-      <!-- Addons Section -->
-      <div class="section-header">
-        <h2>Addons</h2>
+  <!-- ════════════════════════════════════════════════════
+       Zone 1 — Page Header & UI Map
+       ════════════════════════════════════════════════════ -->
+  <section class="addons-section">
+    <div class="page-header">
+      <h1>ADDONS & WEAKAURAS</h1>
+      <div class="last-updated" id="last-updated">
+        Last updated: 26th January 2026<br>
+        Resolution: 1920 x 1080 • UI Scale: 65%
       </div>
-      
-      <div class="items-grid" id="addons-grid"></div>
-
-      <!-- WeakAuras Section -->
-      <div class="section-header">
-        <h2>WeakAuras</h2>
-      </div>
-      <div class="items-grid" id="weakauras-grid"></div>
     </div>
-  </div>
+    <div class="ui-map-wrapper" id="uiMapWrapper"></div>
+  </section>
+
+  <hr class="section-divider" />
+
+  <!-- ════════════════════════════════════════════════════
+       Zone 2 — Addons
+       ════════════════════════════════════════════════════ -->
+  <section class="addons-section">
+    <div class="section-header">
+      <h2>Addons</h2>
+    </div>
+    <div class="items-grid" id="addons-grid"></div>
+  </section>
+
+  <hr class="section-divider" />
+
+  <!-- ════════════════════════════════════════════════════
+       Zone 3 — WeakAuras
+       ════════════════════════════════════════════════════ -->
+  <section class="addons-section">
+    <div class="section-header">
+      <h2>WeakAuras</h2>
+    </div>
+    <div class="items-grid" id="weakauras-grid"></div>
+  </section>
+
+  <!-- ════════════════════════════════════════════════════
+       Zone 4 — Footer
+       ════════════════════════════════════════════════════ -->
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="footer-links">
+        <a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener" class="footer-link">YouTube</a>
+        <a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener" class="footer-link">Twitch</a>
+      </div>
+      <span class="footer-note">Data sourced from Warcraft Logs</span>
+    </div>
+  </footer>
 
   <script src="js/addons.js"></script>
   <script src="js/nav.js"></script>
