--- a/addons.html
+++ b/addons.html
@@ -97,18 +97,22 @@
   </nav>
 
   <!-- ════════════════════════════════════════════════════
-       Zone 1 — Page Header & UI Map
+       Zone 1 — Page Header
        ════════════════════════════════════════════════════ -->
   <section class="addons-section">
     <div class="page-header">
       <h1>ADDONS & WEAKAURAS</h1>
       <div class="last-updated" id="last-updated">
-        Last updated: 26th January 2026<br>
+        Last updated: 15 Feb 2026<br>
         Resolution: 1920 x 1080 • UI Scale: 65%
       </div>
     </div>
-    <div class="ui-map-wrapper" id="uiMapWrapper"></div>
   </section>
+
+  <!-- ════════════════════════════════════════════════════
+       UI Map (full-width, independent)
+       ════════════════════════════════════════════════════ -->
+  <div class="ui-map-wrapper" id="uiMapWrapper"></div>
 
   <hr class="section-divider" />
 
@@ -133,19 +137,6 @@
     </div>
     <div class="items-grid" id="weakauras-grid"></div>
   </section>
-
-  <!-- ════════════════════════════════════════════════════
-       Zone 4 — Footer
-       ════════════════════════════════════════════════════ -->
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div class="footer-links">
-        <a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener" class="footer-link">YouTube</a>
-        <a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener" class="footer-link">Twitch</a>
-      </div>
-      <span class="footer-note">Data sourced from Warcraft Logs</span>
-    </div>
-  </footer>
 
   <script src="js/addons.js"></script>
   <script src="js/nav.js"></script>
