--- a/addons.html
+++ b/addons.html
@@ -103,8 +103,11 @@
     <div class="page-header">
       <h1>ADDONS & WEAKAURAS</h1>
       <div class="last-updated" id="last-updated">
-        Last updated: 15 Feb 2026<br>
-        Resolution: 1920 x 1080 • UI Scale: 65%
+        <span class="meta-label">Last updated:</span> <span class="meta-value">15 Feb 2026</span>
+        <span class="meta-sep">&middot;</span>
+        <span class="meta-label">Resolution:</span> <span class="meta-value">1920 &times; 1080</span>
+        <span class="meta-sep">&middot;</span>
+        <span class="meta-label">UI Scale:</span> <span class="meta-value">65%</span>
       </div>
     </div>
   </section>
