--- a/rankings.html
+++ b/rankings.html
@@ -106,8 +106,6 @@
     <div class="main-grid">
       <nav class="raid-nav" id="raid-nav" aria-label="Raid and boss selection"></nav>
       <main class="content-area">
-        <h1>SHADOW PRIEST TOP 100</h1>
-        <div class="sidebar-parsing-rules" id="sidebar-parsing-rules"></div>
         <!-- ═══ Toolbar (search + sort) ═══ -->
         <div class="toolbar" id="toolbar">
           <div class="toolbar-search">
@@ -118,6 +116,7 @@
             <input type="text" id="search-input" class="toolbar-search-input" placeholder="Search player..." autocomplete="off" />
             <button class="toolbar-search-clear" id="search-clear" aria-label="Clear search" style="display:none;">✕</button>
           </div>
+          <div class="toolbar-parsing-rules" id="sidebar-parsing-rules"></div>
           <div class="last-updated" id="last-updated" role="status" aria-live="polite">
             Loading last updated…
           </div>
