--- a/rankings.html
+++ b/rankings.html
@@ -116,7 +116,6 @@
             <input type="text" id="search-input" class="toolbar-search-input" placeholder="Search player..." autocomplete="off" />
             <button class="toolbar-search-clear" id="search-clear" aria-label="Clear search" style="display:none;">✕</button>
           </div>
-          <div class="toolbar-parsing-rules" id="sidebar-parsing-rules"></div>
           <div class="last-updated" id="last-updated" role="status" aria-live="polite">
             Loading last updated…
           </div>
@@ -127,6 +126,8 @@
             </select>
           </div>
         </div>
+
+        <div class="parsing-rules-box" id="sidebar-parsing-rules"></div>
 
         <section id="rankings">
         </section>
