--- a/rankings.html
+++ b/rankings.html
@@ -106,6 +106,7 @@
     <div class="main-grid">
       <nav class="raid-nav" id="raid-nav" aria-label="Raid and boss selection"></nav>
       <main class="content-area">
+        <h1 class="sr-only">Shadow Priest Top 100 Rankings – MoP Classic</h1>
         <!-- ═══ Toolbar (search + sort) ═══ -->
         <div class="toolbar" id="toolbar">
           <div class="toolbar-search">
