--- a/haste.html
+++ b/haste.html
@@ -108,6 +108,7 @@
   </nav>
 
     <div class="haste-container">
+      <h1 class="sr-only">Shadow Priest Haste Calculator – MoP Classic</h1>
       <header class="haste-header">
         <h1>Shadow Priest Haste Calculator</h1>
       </header>
