--- a/addons.html
+++ b/addons.html
@@ -101,7 +101,7 @@
        ════════════════════════════════════════════════════ -->
   <section class="addons-section">
     <div class="page-header">
-      <h1>ADDONS & WEAKAURAS</h1>
+      <h1 class="sr-only">Addons & WeakAuras – MoP Classic Shadow Priest</h1>
       <div class="last-updated" id="last-updated">
         <span class="meta-label">Last updated:</span> <span class="meta-value">15 Feb 2026</span>
         <span class="meta-sep">&middot;</span>
