--- a/guide.html
+++ b/guide.html
@@ -84,8 +84,7 @@
        Hero — Title & Video
        ════════════════════════════════════════════════════ -->
   <section class="guide-hero">
-    <h1>Shadow Priest Guide</h1>
-    <p class="guide-subtitle">Mists of Pandaria Classic</p>
+    <h1 class="sr-only">Shadow Priest Guide — Mists of Pandaria Classic</h1>
 
     <div class="guide-video-card">
       <div class="guide-video">
