--- a/guide.html
+++ b/guide.html
@@ -121,17 +121,17 @@
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
         Glyphs
       </button>
-      <button class="guide-tab" data-tab="enchants" role="tab" aria-selected="false">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>
-        Enchants
-      </button>
       <button class="guide-tab" data-tab="professions" role="tab" aria-selected="false">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/></svg>
         Professions
       </button>
-      <button class="guide-tab" data-tab="tips" role="tab" aria-selected="false">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg>
-        Tips
+      <button class="guide-tab" data-tab="faq" role="tab" aria-selected="false">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
+        FAQ
+      </button>
+      <button class="guide-tab" data-tab="tot-tips" role="tab" aria-selected="false">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
+        Throne of Thunder Tips
       </button>
     </div>
 
@@ -196,21 +196,6 @@
       </div>
     </div>
 
-    <div class="guide-panel" data-panel="enchants" role="tabpanel">
-      <div class="guide-panel-body">
-        <h2 class="guide-panel-title">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>
-          Enchants
-        </h2>
-        <ul class="guide-list">
-          <li>Placeholder — Weapon: Jade Spirit — best-in-slot for all scenarios.</li>
-          <li>Placeholder — Chest: Glorious Stats (+80 all stats).</li>
-          <li>Placeholder — Shoulders: Greater Crane Wing Inscription (Inscription) or Exalted rep enchant.</li>
-          <li>Placeholder — Use Brilliant Primordial Ruby in all red sockets; Purified Imperial Amethyst for blue.</li>
-        </ul>
-      </div>
-    </div>
-
     <div class="guide-panel" data-panel="professions" role="tabpanel">
       <div class="guide-panel-body">
         <h2 class="guide-panel-title">
@@ -226,17 +211,32 @@
       </div>
     </div>
 
-    <div class="guide-panel" data-panel="tips" role="tabpanel">
+    <div class="guide-panel" data-panel="faq" role="tabpanel">
       <div class="guide-panel-body">
         <h2 class="guide-panel-title">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg>
-          General Tips
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
+          FAQ
         </h2>
         <ul class="guide-list">
-          <li>Placeholder — Always pre-pot with Jade Serpent Potion 1 second before pull.</li>
-          <li>Placeholder — Use Dispersion as a DPS cooldown to regenerate mana during movement phases.</li>
-          <li>Placeholder — Track your DoT uptimes with WeakAuras — aim for 95%+ on SW:P and VT.</li>
-          <li>Placeholder — Communication with your raid leader about multi-dot padding vs priority damage is key.</li>
+          <li>Placeholder — What's the best pre-pot for Shadow Priest? Jade Serpent Potion, used 1 second before pull.</li>
+          <li>Placeholder — Should I use Dispersion on cooldown? Use it during movement phases to regenerate mana without losing uptime.</li>
+          <li>Placeholder — What DoT uptime should I aim for? 95%+ on SW:P and VT — track with WeakAuras.</li>
+          <li>Placeholder — Multi-dot padding vs priority damage? Communicate with your raid leader on fight-by-fight basis.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="guide-panel" data-panel="tot-tips" role="tabpanel">
+      <div class="guide-panel-body">
+        <h2 class="guide-panel-title">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
+          Throne of Thunder Tips
+        </h2>
+        <ul class="guide-list">
+          <li>Placeholder — Jin'rokh: Stand in pools for damage buff, multi-dot Focused Lightning orbs.</li>
+          <li>Placeholder — Horridon: Multi-dot add waves aggressively, save cooldowns for Door 3 and Door 4.</li>
+          <li>Placeholder — Council of Elders: Maintain DoTs on all 4 bosses, priority damage on empowered target.</li>
+          <li>Placeholder — Megaera: Spread DoTs across all heads, use Halo for maximum AoE value.</li>
         </ul>
       </div>
     </div>
