--- a/guide.html
+++ b/guide.html
@@ -131,7 +131,7 @@
       </button>
       <button class="guide-tab" data-tab="tot-tips" role="tab" aria-selected="false">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
-        Throne of Thunder Tips
+        T15 Tips
       </button>
     </div>
 
@@ -230,7 +230,7 @@
       <div class="guide-panel-body">
         <h2 class="guide-panel-title">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
-          Throne of Thunder Tips
+          T15 Tips
         </h2>
         <ul class="guide-list">
           <li>Placeholder — Jin'rokh: Stand in pools for damage buff, multi-dot Focused Lightning orbs.</li>
