--- a/guide.html
+++ b/guide.html
@@ -142,12 +142,75 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/></svg>
           Talents
         </h2>
-        <ul class="guide-list">
-          <li>Placeholder — Recommended talent build for Throne of Thunder Heroic progression.</li>
-          <li>Placeholder — Tier 1: Void Tendrils vs Psyfiend vs Dominate Mind depending on encounter.</li>
-          <li>Placeholder — Tier 4: Twist of Fate is the default pick for most fights; swap to Power Infusion for burst windows.</li>
-          <li>Placeholder — Tier 6: Halo vs Divine Star depending on raid positioning and fight geometry.</li>
-        </ul>
+        <div class="talent-build">
+          <!-- Talent Grid -->
+          <div class="talent-grid">
+            <div class="talent-tier">
+              <span class="talent-tier-label">15</span>
+              <a href="https://www.wowhead.com/mop/spell=108920" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_voidtendrils.jpg" alt="Void Tendrils"></a>
+              <a href="https://www.wowhead.com/mop/spell=108921" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_psyfiend.jpg" alt="Psyfiend"></a>
+              <a href="https://www.wowhead.com/mop/spell=605" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_shadowworddominate.jpg" alt="Dominate Mind"></a>
+            </div>
+            <div class="talent-tier">
+              <span class="talent-tier-label">30</span>
+              <a href="https://www.wowhead.com/mop/spell=64129" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_symbolofhope.jpg" alt="Body and Soul"></a>
+              <a href="https://www.wowhead.com/mop/spell=121536" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_angelicfeather.jpg" alt="Angelic Feather"></a>
+              <a href="https://www.wowhead.com/mop/spell=108942" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_phantasm.jpg" alt="Phantasm"></a>
+            </div>
+            <div class="talent-tier">
+              <span class="talent-tier-label">45</span>
+              <a href="https://www.wowhead.com/mop/spell=109186" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_surgeoflight.jpg" alt="From Darkness, Comes Light"></a>
+              <a href="https://www.wowhead.com/mop/spell=123040" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_soulleech_3.jpg" alt="Mindbender"></a>
+              <a href="https://www.wowhead.com/mop/spell=129250" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_flashoflight.jpg" alt="Solace and Insanity"></a>
+            </div>
+            <div class="talent-tier">
+              <span class="talent-tier-label">60</span>
+              <a href="https://www.wowhead.com/mop/spell=19236" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_testoffaith.jpg" alt="Desperate Prayer"></a>
+              <a href="https://www.wowhead.com/mop/spell=112833" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_spectralguise.jpg" alt="Spectral Guise"></a>
+              <a href="https://www.wowhead.com/mop/spell=108945" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_angelicbulwark.jpg" alt="Angelic Bulwark"></a>
+            </div>
+            <div class="talent-tier">
+              <span class="talent-tier-label">75</span>
+              <a href="https://www.wowhead.com/mop/spell=109142" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_mindtwisting.jpg" alt="Twist of Fate"></a>
+              <a href="https://www.wowhead.com/mop/spell=10060" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_powerinfusion.jpg" alt="Power Infusion"></a>
+              <a href="https://www.wowhead.com/mop/spell=109175" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_burningwill.jpg" alt="Divine Insight"></a>
+            </div>
+            <div class="talent-tier">
+              <span class="talent-tier-label">90</span>
+              <a href="https://www.wowhead.com/mop/spell=121135" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_cascade.jpg" alt="Cascade"></a>
+              <a href="https://www.wowhead.com/mop/spell=110744" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_divinestar.jpg" alt="Divine Star"></a>
+              <a href="https://www.wowhead.com/mop/spell=120517" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_halo.jpg" alt="Halo"></a>
+            </div>
+          </div>
+          <!-- Explanations -->
+          <div class="talent-explanations">
+            <div class="talent-explain">
+              <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop/spell=108920">Void Tendrils</a></strong>
+              <p>Useful for the add spawn on Council, and the chain-lightning spawned adds on Lei Shen.</p>
+            </div>
+            <div class="talent-explain">
+              <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop/spell=121536">Angelic Feather</a></strong>
+              <p>80% movement speed, on a 10 second cooldown with 3 charges.. gg</p>
+            </div>
+            <div class="talent-explain">
+              <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop/spell=129250">Solace and Insanity</a></strong>
+              <p>Strongest single target talent in this row.</p>
+            </div>
+            <div class="talent-explain">
+              <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop/spell=108945">Angelic Bulwark</a></strong>
+              <p>Nice survivability.</p>
+            </div>
+            <div class="talent-explain">
+              <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop/spell=109142">Twist of Fate</a></strong>
+              <p>Snipe adds to maintain high uptime.</p>
+            </div>
+            <div class="talent-explain">
+              <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop/spell=120517">Halo</a></strong>
+              <p>Strongest talent if you can stay at ranged.</p>
+            </div>
+            <p class="talent-boss-note">For boss-specific talent swaps, see the <strong>T15 Tips</strong> tab.</p>
+          </div>
+        </div>
       </div>
     </div>
 
