--- a/guide.html
+++ b/guide.html
@@ -21,7 +21,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <script>window.whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: false };</script>
+  <script>window.whTooltips = { colorLinks: true, iconizeLinks: false, renameLinks: false };</script>
   <script defer src="https://wow.zamimg.com/widgets/power.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768" crossorigin="anonymous"></script>
 </head>
@@ -183,6 +183,7 @@
             </div>
           </div>
           <!-- Explanations -->
+          <script>window.whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: false };</script>
           <div class="talent-explanations">
             <div class="talent-explain">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108920">Void Tendrils</a></strong>
