--- a/guide.html
+++ b/guide.html
@@ -89,7 +89,7 @@
     <div class="guide-video-card">
       <div class="guide-video">
         <iframe
-          src="https://www.youtube.com/embed/LH5aODSFQ1o"
+          src="https://www.youtube.com/embed/LH5aODSFQ1o?autoplay=1&mute=1&cc_load_policy=1"
           title="Shadow Priest MoP Classic Guide — skimmynz"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
