--- a/guide.html
+++ b/guide.html
@@ -153,7 +153,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108920">Void Tendrils</a></strong>
-              <p>Useful for the add spawn on Council, and the chain-lightning spawned adds on Lei Shen.</p>
+              <p>Roots adds in place — useful for Council add spawns and Lei Shen's Diffusion Chain adds.</p>
             </div>
           </div>
 
@@ -166,7 +166,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a></strong>
-              <p>80% movement speed, on a 10 second cooldown with 3 charges.. gg</p>
+              <p>80% movement speed on a 10 second cooldown with 3 charges. Compare against <a href="https://www.wowhead.com/spell=121536">retail version</a>.</p>
             </div>
           </div>
 
@@ -179,7 +179,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=129250">Solace and Insanity</a></strong>
-              <p>Strongest single target talent in this row.</p>
+              <p>Strongest single-target option. Swap to <a href="https://www.wowhead.com/mop-classic/spell=123040">Mindbender</a> on Council and Primordius.</p>
             </div>
           </div>
 
@@ -192,7 +192,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108945">Angelic Bulwark</a></strong>
-              <p>Nice survivability.</p>
+              <p>Passive shield that procs at low health — set and forget.</p>
             </div>
           </div>
 
@@ -205,7 +205,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a></strong>
-              <p>Snipe adds to maintain high uptime.</p>
+              <p>15% damage buff when damaging targets below 35% HP. Snipe low-health adds with <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to maintain high uptime.</p>
             </div>
           </div>
 
@@ -218,7 +218,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a></strong>
-              <p>Strongest talent if you can stay at ranged.</p>
+              <p>Strongest option if you can stay at 20+ yard range. Switch to <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on Primordius. Switch to <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on Council and Ra-den (also Megaera if healers need help).</p>
             </div>
           </div>
 
